--- a/zinser_simulations.ipynb
+++ b/zinser_simulations.ipynb
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in flow cytometry data\n",
-    "culture_data=pd.read_csv('data/zinser_figure2a.csv')\n",
-    "psd_data=pd.read_csv('data/zinser_psd.csv')\n",
+    "culture_data=pd.read_csv('simulation_data/zinser_figure2a.csv')\n",
+    "psd_data=pd.read_csv('simulation_data/zinser_psd.csv')\n",
     "\n",
     "#### reformat to calculate hourly average Qc ####\n",
     "# get experimental time from culture dataset\n",
@@ -84,11 +84,11 @@
     "\n",
     "#### Add in PAR and measurements data ####\n",
     "# get PAR data\n",
-    "ds = xr.open_dataset('data/zinser_processed.nc',\n",
+    "ds = xr.open_dataset('simulation_data/zinser_processed.nc',\n",
     "                    decode_times=False)\n",
     "pro_data['par']=ds.PAR.values\n",
     "# get c-fixation and loss data\n",
-    "gt = xr.open_dataset('data/zinser_ground_truth.nc',\n",
+    "gt = xr.open_dataset('simulation_data/zinser_ground_truth.nc',\n",
     "                    decode_times=False)\n",
     "# get carbon fixation for all rows in pg\n",
     "pro_data['GPP']=gt.carbonfix.values/1000\n",
